create random forest, xgboost, linear regression models

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2,23 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from scipy.stats import spearmanr\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "from statsmodels.tsa.arima.model import ARIMA\n",
+    "from xgboost import XGBRegressor\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "import numpy as np\n",
     "import optuna as ot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,21 +41,31 @@
     "data['DIESEL_RETAIL_PRICE'] = data['DIESEL_RETAIL_PRICE'] * (base_cpi/data['CPI_US'])\n",
     "data['DATE'] = pd.to_datetime(data['DATE'])\n",
     "\n",
-    "data = data.sort_values('DATE', ignore_index=True).set_index('DATE').drop(['avg_price_steers_ML1', 'avg_price_steers_ML1_2', 'avg_price_heifers_ML1', 'avg_price_heifers_ML1_2', 'CPI_US'], axis=1)\n",
+    "# ['avg_price_steers_ML1', 'avg_price_steers_ML1_2', 'avg_price_heifers_ML1', 'avg_price_heifers_ML1_2', 'CPI_US', 'NATIONAL_AUCTION_SALES','NATIONAL_TOTAL_SALES', 'TEXAS_AUCTION_SALES']\n",
+    "data = data.sort_values('DATE', ignore_index=True).set_index('DATE').drop(['avg_price_steers_ML1', 'avg_price_steers_ML1_2', 'avg_price_heifers_ML1', 'avg_price_heifers_ML1_2', 'NATIONAL_AUCTION_SALES','NATIONAL_TOTAL_SALES', 'TEXAS_AUCTION_SALES'], axis=1)\n",
     "# print(data.head())\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RANDOM FOREST MODEL"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R² Score: 0.9644705539882531\n",
-      "Adjusted-R² Score: 0.9600976990944996\n"
+      "R² Score: 0.9692757482880006\n",
+      "Adjusted-R² Score: 0.9665243227615529\n",
+      "Root Mean Squared Error (RMSE): 5.965637679690656\n",
+      "Mean Absolute Error (MAE): 4.596643251439692\n"
      ]
     }
    ],
@@ -67,57 +85,109 @@
     "rf_pred = rf_regressor.predict(X_test)\n",
     "\n",
     "# EVALUATING MODEL PERFORMANCE\n",
-    "rf_r2 = r2_score(y_test, rf_pred)\n",
+    "rf_r2 = r2_score(y_test, rf_pred) # R²\n",
     "print(f'R² Score: {rf_r2}')\n",
     "\n",
     "n = X_test.shape[0]\n",
     "k = X_test.shape[1]\n",
-    "rf_adj_r2 = 1-((1-rf_r2)*(n-1)/(n-k-1))\n",
-    "print(f'Adjusted-R² Score: {rf_adj_r2}')"
+    "rf_adj_r2 = 1-((1-rf_r2)*(n-1)/(n-k-1)) # Adjusted-R²\n",
+    "print(f'Adjusted-R² Score: {rf_adj_r2}')\n",
+    "\n",
+    "rf_rmse = np.sqrt(mean_squared_error(y_test, rf_pred)) # RMSE\n",
+    "print(f'Root Mean Squared Error (RMSE): {rf_rmse}')\n",
+    "\n",
+    "rf_mae = mean_absolute_error(y_test, rf_pred) # MAE\n",
+    "print(f'Mean Absolute Error (MAE): {rf_mae}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBOOST MODEL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Figure size 1000x500 with 0 Axes>"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1000x500 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² Score: 0.9692757482880006\n",
+      "Adjusted-R² Score: 0.9665243227615529\n",
+      "Root Mean Squared Error (RMSE): 5.965637679690656\n",
+      "Mean Absolute Error (MAE): 4.596643251439692\n"
+     ]
     }
    ],
    "source": [
-    "# VISUALIZATION OF DATA\n",
-    "plt.figure(figsize=(10,5))"
+    "# CREATE AND TRAIN XGBOOST REGRESSOR\n",
+    "xgb_reg = XGBRegressor()\n",
+    "xgb_reg.fit(X_train, y_train)\n",
+    "xgb_pred = xgb_reg.predict(X_test)\n",
+    "\n",
+    "# EVALUATING MODEL PERFORMANCE\n",
+    "rf_r2 = r2_score(y_test, rf_pred) # R²\n",
+    "print(f'R² Score: {rf_r2}')\n",
+    "\n",
+    "n = X_test.shape[0]\n",
+    "k = X_test.shape[1]\n",
+    "rf_adj_r2 = 1-((1-rf_r2)*(n-1)/(n-k-1)) # Adjusted-R²\n",
+    "print(f'Adjusted-R² Score: {rf_adj_r2}')\n",
+    "\n",
+    "rf_rmse = np.sqrt(mean_squared_error(y_test, rf_pred)) # RMSE\n",
+    "print(f'Root Mean Squared Error (RMSE): {rf_rmse}')\n",
+    "\n",
+    "rf_mae = mean_absolute_error(y_test, rf_pred) # MAE\n",
+    "print(f'Mean Absolute Error (MAE): {rf_mae}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LINEAR REGRESSION MODEL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 351,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² Score: 0.9692757482880006\n",
+      "Adjusted-R² Score: 0.9665243227615529\n",
+      "Root Mean Squared Error (RMSE): 8.50286814543951\n",
+      "Mean Absolute Error (MAE): 6.68824434657122\n"
+     ]
+    }
+   ],
    "source": [
-    "# # CREATE A CORRELATION MATRIX\n",
-    "# correlation_matrix = data.corr()\n",
+    "# CREATE AND TRAIN LINEAR REGRESSION MODEL\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(X_train, y_train)\n",
+    "lrg_pred = lin_reg.predict(X_test)\n",
     "\n",
-    "# # CREATE HEATMAP\n",
-    "# plt.figure(figsize=(6,6))\n",
-    "# sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', center=0, fmt='.2f', square=True, linewidths=0.5)"
+    "# EVALUATING MODEL PERFORMANCE\n",
+    "lrg_r2 = r2_score(y_test, lrg_pred) # R²\n",
+    "print(f'R² Score: {rf_r2}')\n",
+    "\n",
+    "n = X_test.shape[0]\n",
+    "k = X_test.shape[1]\n",
+    "lrg_adj_r2 = 1-((1-rf_r2)*(n-1)/(n-k-1)) # Adjusted-R²\n",
+    "print(f'Adjusted-R² Score: {lrg_adj_r2}')\n",
+    "\n",
+    "lrg_rmse = np.sqrt(mean_squared_error(y_test, lrg_pred)) # RMSE\n",
+    "print(f'Root Mean Squared Error (RMSE): {lrg_rmse}')\n",
+    "\n",
+    "lrg_mae = mean_absolute_error(y_test, lrg_pred) # MAE\n",
+    "print(f'Mean Absolute Error (MAE): {lrg_mae}')"
    ]
   }
  ],
