add helper function to print metrics, change data split to avoid lookahead bias

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_metrics(X_test, y_test, y_pred): # Helper function to print model metrics\n",
+    "    rf_r2 = r2_score(y_test, y_pred) # R²\n",
+    "    print(f'R² Score: {rf_r2}')\n",
+    "\n",
+    "    n = X_test.shape[0]\n",
+    "    k = X_test.shape[1]\n",
+    "    adj_r2 = 1-((1-rf_r2)*(n-1)/(n-k-1)) # Adjusted-R²\n",
+    "    print(f'Adjusted-R² Score: {adj_r2}')\n",
+    "\n",
+    "    prcorr = np.corrcoef(y_test, y_pred)[0,1] # Pearson Correlation Coefficient \n",
+    "    print(\"Pearson correlation:\", prcorr)\n",
+    "\n",
+    "    srcorr, p_value = spearmanr(y_test, y_pred) # Spearman’s Rank Correlation\n",
+    "    print(\"Spearman correlation:\", srcorr)\n",
+    "\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred)) # RMSE\n",
+    "    print(f'Root Mean Squared Error (RMSE): {rmse}')\n",
+    "\n",
+    "    mae = mean_absolute_error(y_test, y_pred) # MAE\n",
+    "    print(f'Mean Absolute Error (MAE): {mae}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,27 +83,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R² Score: 0.9692757482880006\n",
-      "Adjusted-R² Score: 0.9665243227615529\n",
-      "Root Mean Squared Error (RMSE): 5.965637679690656\n",
-      "Mean Absolute Error (MAE): 4.596643251439692\n"
+      "R² Score: -4.065129840627757\n",
+      "Adjusted-R² Score: -4.5187235576989\n",
+      "Pearson correlation: -0.5421383430544126\n",
+      "Spearman correlation: -0.21288191859158784\n",
+      "Root Mean Squared Error (RMSE): 33.247231240164425\n",
+      "Mean Absolute Error (MAE): 25.119362570084594\n"
      ]
     }
    ],
    "source": [
-    "# CREATE RANDOM FOREST MODEL\n",
-    "X = data.drop(['AVG_PRICE_AUCTION'], axis=1)\n",
-    "y = data['AVG_PRICE_AUCTION']\n",
+    "# # CREATE RANDOM FOREST MODEL\n",
+    "# X = data.drop(['AVG_PRICE_AUCTION'], axis=1)\n",
+    "# y = data['AVG_PRICE_AUCTION']\n",
     "\n",
-    "# SPLIT DATA INTO 80/20 TRAINING TESTING SETS\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# # SPLIT DATA INTO 80/20 TRAINING TESTING SETS\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "train_size = int(len(data) * 0.8)\n",
+    "train_data = data.iloc[:train_size]\n",
+    "test_data = data.iloc[train_size:]\n",
+    "X_train = train_data.drop('AVG_PRICE_AUCTION', axis=1)\n",
+    "y_train = train_data['AVG_PRICE_AUCTION']\n",
+    "X_test = test_data.drop('AVG_PRICE_AUCTION', axis=1)\n",
+    "y_test = test_data['AVG_PRICE_AUCTION']\n",
     "\n",
     "# CREATE AND TRAIN RF REGRESSOR\n",
     "rf_regressor = RandomForestRegressor(n_estimators=100, random_state=42)\n",
@@ -85,19 +123,7 @@
     "rf_pred = rf_regressor.predict(X_test)\n",
     "\n",
     "# EVALUATING MODEL PERFORMANCE\n",
-    "rf_r2 = r2_score(y_test, rf_pred) # R²\n",
-    "print(f'R² Score: {rf_r2}')\n",
-    "\n",
-    "n = X_test.shape[0]\n",
-    "k = X_test.shape[1]\n",
-    "rf_adj_r2 = 1-((1-rf_r2)*(n-1)/(n-k-1)) # Adjusted-R²\n",
-    "print(f'Adjusted-R² Score: {rf_adj_r2}')\n",
-    "\n",
-    "rf_rmse = np.sqrt(mean_squared_error(y_test, rf_pred)) # RMSE\n",
-    "print(f'Root Mean Squared Error (RMSE): {rf_rmse}')\n",
-    "\n",
-    "rf_mae = mean_absolute_error(y_test, rf_pred) # MAE\n",
-    "print(f'Mean Absolute Error (MAE): {rf_mae}')"
+    "print_metrics(X_test, y_test, rf_pred)"
    ]
   },
   {
@@ -109,17 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R² Score: 0.9692757482880006\n",
-      "Adjusted-R² Score: 0.9665243227615529\n",
-      "Root Mean Squared Error (RMSE): 5.965637679690656\n",
-      "Mean Absolute Error (MAE): 4.596643251439692\n"
+      "R² Score: -6.037797673434233\n",
+      "Adjusted-R² Score: -6.668048211353716\n",
+      "Pearson correlation: -0.4322863122348723\n",
+      "Spearman correlation: -0.2508497169330155\n",
+      "Root Mean Squared Error (RMSE): 39.19029940112609\n",
+      "Mean Absolute Error (MAE): 30.649350070335164\n"
      ]
     }
    ],
@@ -130,19 +158,7 @@
     "xgb_pred = xgb_reg.predict(X_test)\n",
     "\n",
     "# EVALUATING MODEL PERFORMANCE\n",
-    "rf_r2 = r2_score(y_test, rf_pred) # R²\n",
-    "print(f'R² Score: {rf_r2}')\n",
-    "\n",
-    "n = X_test.shape[0]\n",
-    "k = X_test.shape[1]\n",
-    "rf_adj_r2 = 1-((1-rf_r2)*(n-1)/(n-k-1)) # Adjusted-R²\n",
-    "print(f'Adjusted-R² Score: {rf_adj_r2}')\n",
-    "\n",
-    "rf_rmse = np.sqrt(mean_squared_error(y_test, rf_pred)) # RMSE\n",
-    "print(f'Root Mean Squared Error (RMSE): {rf_rmse}')\n",
-    "\n",
-    "rf_mae = mean_absolute_error(y_test, rf_pred) # MAE\n",
-    "print(f'Mean Absolute Error (MAE): {rf_mae}')"
+    "print_metrics(X_test, y_test, xgb_pred)"
    ]
   },
   {
@@ -154,17 +170,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R² Score: 0.9692757482880006\n",
-      "Adjusted-R² Score: 0.9665243227615529\n",
-      "Root Mean Squared Error (RMSE): 8.50286814543951\n",
-      "Mean Absolute Error (MAE): 6.68824434657122\n"
+      "R² Score: -1.0747181053000974\n",
+      "Adjusted-R² Score: -1.2605137565210014\n",
+      "Pearson correlation: 0.6415227153267419\n",
+      "Spearman correlation: 0.6232802665679377\n",
+      "Root Mean Squared Error (RMSE): 21.278437846996813\n",
+      "Mean Absolute Error (MAE): 18.041762354218662\n"
      ]
     }
    ],
@@ -175,19 +193,7 @@
     "lrg_pred = lin_reg.predict(X_test)\n",
     "\n",
     "# EVALUATING MODEL PERFORMANCE\n",
-    "lrg_r2 = r2_score(y_test, lrg_pred) # R²\n",
-    "print(f'R² Score: {rf_r2}')\n",
-    "\n",
-    "n = X_test.shape[0]\n",
-    "k = X_test.shape[1]\n",
-    "lrg_adj_r2 = 1-((1-rf_r2)*(n-1)/(n-k-1)) # Adjusted-R²\n",
-    "print(f'Adjusted-R² Score: {lrg_adj_r2}')\n",
-    "\n",
-    "lrg_rmse = np.sqrt(mean_squared_error(y_test, lrg_pred)) # RMSE\n",
-    "print(f'Root Mean Squared Error (RMSE): {lrg_rmse}')\n",
-    "\n",
-    "lrg_mae = mean_absolute_error(y_test, lrg_pred) # MAE\n",
-    "print(f'Mean Absolute Error (MAE): {lrg_mae}')"
+    "print_metrics(X_test, y_test, lrg_pred)"
    ]
   }
  ],
