--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,13 @@
     "    print(f'Root Mean Squared Error (RMSE): {rmse}')\n",
     "\n",
     "    mae = mean_absolute_error(y_test, y_pred) # MAE\n",
-    "    print(f'Mean Absolute Error (MAE): {mae}')"
+    "    print(f'Mean Absolute Error (MAE): {mae}')\n",
+    "\n",
+    "def create_lag_features(df, target_col='diff_1', num_lags=1):\n",
+    "    df_lagged = df.copy()\n",
+    "    for lag in range(1,num_lags+1):\n",
+    "        df_lagged[f'{target_col}_lag{lag}'] = df_lagged[target_col].shift(lag)\n",
+    "    return df_lagged"
    ]
   },
   {
@@ -140,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -185,15 +191,14 @@
     }
    ],
    "source": [
-    "# plot_acf(data['AVG_PRICE_AUCTION'], ax=plt.gca())\n",
-    "# plot_pacf(data['AVG_PRICE_AUCTION'], ax=plt.gca())\n",
-    "\n",
     "# PERFORM DIFFERENCING\n",
     "data['diff_1'] = data['AVG_PRICE_AUCTION'].diff(periods=1).bfill()\n",
     "print(data['diff_1'])\n",
     "\n",
-    "plot_acf(data['diff_1'], ax=plt.gca())\n",
-    "plot_pacf(data['diff_1'], ax=plt.gca())"
+    "# plot_acf(data['diff_1'], ax=plt.gca())\n",
+    "# plot_pacf(data['diff_1'], ax=plt.gca())\n",
+    "\n",
+    "# CREATE 1 LAG PERIOD\n"
    ]
   },
   {
