create lstm model; reorganize models

--- a/models/modeling.ipynb
+++ b/models/modeling.ipynb
@@ -24,8 +24,8 @@
     "from statsmodels.tsa.stattools import adfuller\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
-    "from pmdarima.arima import auto_arima\n",
-    "from pmdarima.arima import ADFTest\n",
+    "# from pmdarima.arima import auto_arima\n",
+    "# from pmdarima.arima import ADFTest\n",
     "from xgboost import XGBRegressor\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -1776,7 +1776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
