update linear regression model

--- a/models/linear_regression.ipynb
+++ b/models/linear_regression.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +161,7 @@
     "plt.plot(y_train.index, lrg_train_pred, label='Train predictions', color='purple', linestyle='--')\n",
     "plt.plot(y_test.index, lrg_forecast_pred, label='Test predictions', color='red', linestyle='--')\n",
     "plt.legend()\n",
+    "plt.savefig(os.path.join('..', 'figures', 'linear_regression_plot.png'), dpi=300)\n",
     "plt.show()"
    ]
   },
