modify lstm file saving

--- a/models/lstm.ipynb
+++ b/models/lstm.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -504,13 +504,13 @@
     "plt.plot(preds, label='Predicted Data') # predicted plot\n",
     "plt.title('Time-Series Prediction')\n",
     "plt.legend()\n",
-    "plt.savefig(\"whole_plot.png\", dpi=300)\n",
+    "plt.savefig(\"lstm_whole_plot.png\", dpi=300)\n",
     "plt.show() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
     "\n",
     "plt.plot(test_target, label=\"Actual Data\")\n",
     "plt.plot(test_predict, label=\"LSTM Predictions\")\n",
-    "plt.savefig(\"small_plot.png\", dpi=300)\n",
+    "plt.savefig(\"lstm_small_plot.png\", dpi=300)\n",
     "plt.show();"
    ]
   },
