--- a/models/sarimax.ipynb
+++ b/models/sarimax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "d6b6ccbc",
    "metadata": {},
    "outputs": [],
@@ -20,10 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "2deab6cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['AVG_PRICE_AUCTION', 'FEEDER_CATTLE_FUTURES_TYPICAL_PRICE',\n",
+      "       'US_MXN_RATES', 'CPI_US', 'FEDERAL_INTEREST_RATE'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "file_path = os.path.join('..', 'aggregated_data.csv')\n",
     "data = pd.read_csv(file_path)\n",
@@ -50,12 +60,14 @@
     "     'ALFAFA_HAY_PPI', \n",
     "     'CORN_PPI',\n",
     "    #  'US_MXN_RATES',\n",
-    "     ], axis=1)\n"
+    "     ], axis=1)\n",
+    "\n",
+    "print(data.columns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "c5944ea3",
    "metadata": {},
    "outputs": [],
@@ -72,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "7a76c306",
    "metadata": {},
    "outputs": [],
@@ -90,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "4c9d6be7",
    "metadata": {},
    "outputs": [
@@ -99,19 +111,19 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize bic\n",
-      " ARIMA(1,0,1)(0,0,0)[0]             : BIC=2230.178, Time=0.19 sec\n",
+      " ARIMA(1,0,1)(0,0,0)[0]             : BIC=2230.178, Time=0.20 sec\n",
       " ARIMA(0,0,0)(0,0,0)[0]             : BIC=2407.452, Time=0.08 sec\n",
-      " ARIMA(1,0,0)(0,0,0)[0]             : BIC=2319.684, Time=0.12 sec\n",
-      " ARIMA(0,0,1)(0,0,0)[0]             : BIC=2370.094, Time=0.17 sec\n",
-      " ARIMA(2,0,1)(0,0,0)[0]             : BIC=2240.489, Time=0.23 sec\n",
-      " ARIMA(1,0,2)(0,0,0)[0]             : BIC=2234.071, Time=0.26 sec\n",
-      " ARIMA(0,0,2)(0,0,0)[0]             : BIC=2338.521, Time=0.21 sec\n",
-      " ARIMA(2,0,0)(0,0,0)[0]             : BIC=2272.178, Time=0.19 sec\n",
-      " ARIMA(2,0,2)(0,0,0)[0]             : BIC=2240.154, Time=0.29 sec\n",
-      " ARIMA(1,0,1)(0,0,0)[0] intercept   : BIC=2248.405, Time=0.23 sec\n",
+      " ARIMA(1,0,0)(0,0,0)[0]             : BIC=2319.684, Time=0.11 sec\n",
+      " ARIMA(0,0,1)(0,0,0)[0]             : BIC=2370.094, Time=0.15 sec\n",
+      " ARIMA(2,0,1)(0,0,0)[0]             : BIC=2240.489, Time=0.20 sec\n",
+      " ARIMA(1,0,2)(0,0,0)[0]             : BIC=2234.071, Time=0.34 sec\n",
+      " ARIMA(0,0,2)(0,0,0)[0]             : BIC=2338.521, Time=0.23 sec\n",
+      " ARIMA(2,0,0)(0,0,0)[0]             : BIC=2272.178, Time=0.18 sec\n",
+      " ARIMA(2,0,2)(0,0,0)[0]             : BIC=2240.154, Time=0.28 sec\n",
+      " ARIMA(1,0,1)(0,0,0)[0] intercept   : BIC=2248.405, Time=0.21 sec\n",
       "\n",
       "Best model:  ARIMA(1,0,1)(0,0,0)[0]          \n",
-      "Total fit time: 1.972 seconds\n"
+      "Total fit time: 1.991 seconds\n"
      ]
     }
    ],
@@ -128,6 +140,7 @@
     "                  max_q=3,\n",
     "                  seasonal=False,\n",
     "                  trace=True,\n",
+    "                  random_state=42,\n",
     "                  error_action='ignore',\n",
     "                  suppress_warnings=True,\n",
     "                  stepwise=True)"
@@ -135,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "465e142c",
    "metadata": {},
    "outputs": [
@@ -156,7 +169,7 @@
       "Dep. Variable:                      y   No. Observations:                  332\n",
       "Model:               SARIMAX(1, 0, 1)   Log Likelihood               -1094.771\n",
       "Date:                Fri, 11 Apr 2025   AIC                           2203.542\n",
-      "Time:                        08:21:53   BIC                           2230.178\n",
+      "Time:                        15:27:57   BIC                           2230.178\n",
       "Sample:                             0   HQIC                          2214.164\n",
       "                                - 332                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -199,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "e31ba6e5",
    "metadata": {},
    "outputs": [
